[gd_scene load_steps=3 format=3 uid="uid://bam20cs1p20tp"]

[ext_resource type="FontFile" uid="uid://btwwbgeuvog5o" path="res://fonts/Retro Gaming.ttf" id="1_av17y"]
[ext_resource type="Script" path="res://scripts/screens/title_screen.gd" id="1_ng0qv"]

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -17.0
offset_right = -77.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ng0qv")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.5
offset_right = 355.5
offset_bottom = 175.0
grow_horizontal = 2
rotation = -0.00390237
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_av17y")
theme_override_font_sizes/font_size = 100
text = "The Legend's"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -51.5
offset_right = 83.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start "

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = 191.0
offset_right = -337.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "CREDITS"

[node name="HowtoplayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 243.0
offset_top = 191.0
offset_right = 547.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "How To Play"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 91.5
offset_right = 83.0
offset_bottom = 194.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "QUIT"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="HowtoplayButton" to="." method="_on_howtoplay_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
